<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.fragments.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner_radius"
                android:elevation="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/colorfondo">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_fragment_que_es"
                        android:textAlignment="center"
                        android:layout_margin="10dp"
                        android:textSize="@dimen/title_size_home_fragment"
                        android:textStyle="bold"
                        android:textColor="@color/colortitulo"/>

                    <View android:layout_width="match_parent" android:layout_height="3dp"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/alto_home_imagen"
                        android:src="@drawable/logocecomp"
                        android:contentDescription="@string/logo_cecomp_desc"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:justificationMode="inter_word"
                        android:text="@string/home_fragment_que_es_resp"
                        android:textColor="@color/colorTexto"
                        android:textSize="@dimen/text_size_home_fragment" />

                    <View android:layout_width="match_parent" android:layout_height="3dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_fragment_vision"
                        android:textAlignment="center"
                        android:textSize="@dimen/title_size_home_fragment"
                        android:textStyle="bold"
                        android:textColor="@color/colortitulo"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:justificationMode="inter_word"
                        android:text="@string/home_fragment_vision_resp"
                        android:textColor="@color/colorTexto"
                        android:textSize="@dimen/text_size_home_fragment" />

                    <View android:layout_width="match_parent" android:layout_height="3dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_fragment_mision"
                        android:textAlignment="center"
                        android:textSize="@dimen/title_size_home_fragment"
                        android:textStyle="bold"
                        android:textColor="@color/colortitulo"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:justificationMode="inter_word"
                        android:text="@string/home_fragment_mision_resp"
                        android:textColor="@color/colorTexto"
                        android:textSize="@dimen/text_size_home_fragment" />

                    <View android:layout_width="match_parent" android:layout_height="3dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_fragment_cursos"
                        android:textAlignment="center"
                        android:textSize="@dimen/title_size_home_fragment"
                        android:textStyle="bold"
                        android:textColor="@color/colortitulo"/>

                    <View android:layout_width="match_parent" android:layout_height="3dp"/>

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:layout_margin="10dp">
                            <ImageView
                                android:layout_width="@dimen/course_logo_size"
                                android:layout_height="@dimen/course_logo_size"
                                android:src="@drawable/android"
                                android:contentDescription="@string/logo_android_desc"/>

                            <ImageView
                                android:layout_width="@dimen/course_logo_size"
                                android:layout_height="@dimen/course_logo_size"
                                android:src="@drawable/office"
                                android:contentDescription="@string/logo_android_desc"/>
                            <ImageView
                                android:layout_width="@dimen/course_logo_size"
                                android:layout_height="@dimen/course_logo_size"
                                android:src="@drawable/autocad"
                                android:contentDescription="@string/logo_android_desc"/>
                        </LinearLayout>


                    </HorizontalScrollView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</FrameLayout>